new_tests/semantics/type/bad/011_GLOBAL_6.cm
/*
    Type Error 402

    1| def const a:Int = 3.14
    Constant variable 'a' was declared with type Int, but 'a' was initialized to a value of type Real.

    Suggestion:
    A variable declared with type Int must be initialized to a value of type Int.
*/

def const a:Int = 3.14
